# test_sqlfluff

./: .sqlfluff  pyproject.toml
.github/workflows/: blank.yml  sql_linter.yml
sql/: sample_test.sql  test.sql
