[tool.poetry]
name = "test-sqlfluff"
version = "0.1.0"
description = ""
authors = ["Hirochika Yamashiro <hirochika.yamashiro@rizapgroup.com>"]
readme = "README.md"
packages = [{include = "test_sqlfluff"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlfluff = "^1.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
